ローカルストレージにメモを保存するAPIを作成

--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
         <textarea class="notesBody" placeholder="ここに本文を追加"></textarea>
       </div>
     </div>
+
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
