--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="notes" id="app">
-      <div class="notesSidebar">
+      <!-- <div class="notesSidebar">
         <button class="notesAdd" type="button">ノートを追加</button>
         <div class="noteList">
           <div class="notesList-item">
@@ -21,7 +21,7 @@
       <div class="notesPreview">
         <input type="text" class="notesTitle" placeholder="タイトルを記入" />
         <textarea class="notesBody" placeholder="ここに本文を追加"></textarea>
-      </div>
+      </div> -->
     </div>
 
     <script type="module" src="./js/main.js"></script>
